--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 id="weather" class="lead">Clouds</h1>
         </div>
     </div>
-<script src="/temperature-hot-master/data.js"></script>
+<script src="/data.js"></script>
 </body>
 
 </html>
